--- a/Project1/gpt/src/containers/possibility/possibility.css
+++ b/Project1/gpt/src/containers/possibility/possibility.css
@@ -4,10 +4,11 @@
 }
 
 .gpt3__possibility-image {
-  display: flex;
   flex: 1;
+  display: flex;
   justify-content: flex-start;
   align-items: center;
+
   margin-right: 2rem;
 }
 
@@ -19,14 +20,13 @@
 .gpt3__possibility-content {
   flex: 1;
   display: flex;
-  flex-direction: column;
   justify-content: flex-end;
   align-items: flex-start;
+  flex-direction: column;
 }
 
 .gpt3__possibility-content h4 {
   font-family: var(--font-family);
-  font-style: normal;
   font-weight: 500;
   font-size: 16px;
   line-height: 30px;
@@ -34,30 +34,24 @@
 }
 
 .gpt3__possibility-content h4:last-child {
-  font-family: var(--font-family);
-  font-style: normal;
-  font-weight: 500;
-  font-size: 16px;
-  line-height: 30px;
   color: #ff8a71;
 }
 
 .gpt3__possibility-content h1 {
   font-family: var(--font-family);
-  font-style: normal;
   font-weight: 800;
   font-size: 34px;
   line-height: 45px;
-  margin: 1rem 0rem;
+  margin: 1rem 0;
 }
 
 .gpt3__possibility-content p {
+  color: var(--color-text);
   font-family: var(--font-family);
-  font-style: normal;
   font-weight: 400;
   font-size: 16px;
   line-height: 30px;
-  color: var(--color-text);
+
   margin-bottom: 2rem;
 }
 
@@ -71,8 +65,10 @@
   }
 
   .gpt3__possibility-image img {
-    width: unset;
-    height: unset;
+    /* width: unset; */
+    /* height: unset; */
+    width: 100%;
+    height: 100%;
   }
 
   .gpt3__possibility-content {
