--- a/Project1/gpt/src/containers/header/header.css
+++ b/Project1/gpt/src/containers/header/header.css
@@ -29,7 +29,7 @@
   font-size: 20px;
   line-height: 27px;
 
-  color: var(--color-text);
+  color: var(--color-subtext);
   margin-top: 1.5rem;
 }
 
