--- a/Project1/gpt/src/containers/whatGPT3/whatGPT3.css
+++ b/Project1/gpt/src/containers/whatGPT3/whatGPT3.css
@@ -6,43 +6,41 @@
   background: var(--color-footer);
 
   /* ff 3.6+ */
-  background: -moz-radial-gradient(
-    circle at 30% -100%,
-    #042c54 25%,
-    rgba(4, 44, 84, 1) 85%,
-    rgba(27, 120, 222, 1) 100%
+  background: -moz-linear-gradient(
+    135deg,
+    rgba(132, 198, 155, 1) 0%,
+    rgba(26, 47, 75, 1) 65%
   );
 
   /* safari 5.1+,chrome 10+ */
-  background: -webkit-radial-gradient(
-    circle at 30% -100%,
-    #042c54 25%,
-    rgba(4, 44, 84, 1) 85%,
-    rgba(27, 120, 222, 1) 100%
+  background: -webkit-linear-gradient(
+    135deg,
+    rgba(132, 198, 155, 1) 0%,
+    rgba(26, 47, 75, 1) 65%
   );
 
   /* opera 11.10+ */
-  background: -o-radial-gradient(
-    circle at 30% -100%,
-    #042c54 25%,
-    rgba(4, 44, 84, 1) 85%,
-    rgba(27, 120, 222, 1) 100%
+  background: -o-linear-gradient(
+    135deg,
+    rgba(132, 198, 155, 1) 0%,
+    rgba(26, 47, 75, 1) 65%
   );
+
+  /* ie 6-9 */
+  filter: progid:DXImageTransform.Microsoft.gradient( startColorstr='#1A2F4B', endColorstr='#84C69B', GradientType=1 );
 
   /* ie 10+ */
-  background: -ms-radial-gradient(
-    circle at 30% -100%,
-    #042c54 25%,
-    rgba(4, 44, 84, 1) 85%,
-    rgba(27, 120, 222, 1) 100%
+  background: -ms-linear-gradient(
+    135deg,
+    rgba(132, 198, 155, 1) 0%,
+    rgba(26, 47, 75, 1) 65%
   );
 
-  /* global 92%+ browsers support */
-  background: radial-gradient(
-    circle at 30% -100%,
-    #042c54 25%,
-    rgba(4, 44, 84, 1) 85%,
-    rgba(27, 120, 222, 1) 100%
+  /* global 94%+ browsers support */
+  background: linear-gradient(
+    135deg,
+    rgba(132, 198, 155, 1) 0%,
+    rgba(26, 47, 75, 1) 65%
   );
 
   filter: drop-shadow(0px 4px 4px rgba(0, 0, 0, 0.25));
